# mcp-time

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  TESTING.md
.planning/mcp-time-server/plans/: CRITIQUE.md  PLAN.md
.planning/mcp-time-server/research/: approach.md  codebase-integration.md  quality-standards.md  risks-edge-cases.md
src/: main.rs  server.rs
tests/: integration.rs
