[package]
name = "mcp-time"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "mcp_time"
path = "src/lib.rs"

[[bin]]
name = "mcp-time"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
jiff = { version = "0.2", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["jiff02"] }
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
